Fix-tests and add roundstartTechs
fix-test

fix-test#2

fix-test#3

fix-test#bliat

fix-test#5

fix-test and add roundstartTechs

fix-test and recipe modification

Macro-fix

fix map

fix-map#2

end fix-rweak of Research

offf

--- a/Resources/Maps/amber.yml
+++ b/Resources/Maps/amber.yml
@@ -133351,10 +133351,15 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - Industrial
+      - Engineering
       - Arsenal
-      - Experimental
-      - CivilianServices
+      - Security
+      - Cargo
+      - Shaft
+      - Scientific
+      - Robotics
+      - Medical
+      - Service
 - proto: SeedExtractor
   entities:
   - uid: 298
@@ -143467,10 +143472,15 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - Industrial
+      - Engineering
       - Arsenal
-      - Experimental
-      - CivilianServices
+      - Security
+      - Cargo
+      - Shaft
+      - Scientific
+      - Robotics
+      - Medical
+      - Service
 - proto: UniformShortsRed
   entities:
   - uid: 24494
