--- a/Resources/Prototypes/Recipes/Lathes/Packs/robotics.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/robotics.yml
@@ -35,6 +35,8 @@
 - type: latheRecipePack
   id: BorgModules
   recipes:
+  - BorgModuleAnomaly
+  - BorgModuleArtifact
   - BorgModuleAdvancedCleaning
   - BorgModuleAdvancedTool
   - BorgModuleAdvancedClowning
