--- a/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
@@ -55,6 +55,7 @@
 - type: latheRecipePack
   id: ScienceWeapons
   recipes:
+  - WeaponLaserSvalinn
   - WeaponPistolCHIMP
   - WeaponForceGun
   - WeaponProtoKineticAccelerator
