--- a/Resources/Prototypes/Recipes/Lathes/robot_modules.yml
+++ b/Resources/Prototypes/Recipes/Lathes/robot_modules.yml
@@ -19,9 +19,9 @@
     Plastic: 250
     Gold: 50
 
-## Recipes
+ # Recipes
 
-# Generic
+ # Generic
 - type: latheRecipe
   parent: BaseBorgModuleRecipe
   id: BorgModuleTool
@@ -38,14 +38,14 @@
   result: BorgModuleFireExtinguisher
 
 # Cargo Modules
-
-- type: latheRecipe
-  parent: BaseGoldBorgModuleRecipe
-  id: BorgModuleAdvancedMining
-  result: BorgModuleAdvancedMining
-
-# Engineering Modules
-
+#
+#- type: latheRecipe
+#  parent: BaseGoldBorgModuleRecipe
+#  id: BorgModuleAdvancedMining
+#  result: BorgModuleAdvancedMining
+#
+## Engineering Modules
+#
 - type: latheRecipe
   parent: BaseGoldBorgModuleRecipe
   id: BorgModuleAdvancedTool
@@ -58,23 +58,13 @@
   id: BorgModuleAdvancedCleaning
   result: BorgModuleAdvancedCleaning
 
-# Medical Modules
-
-- type: latheRecipe
-  parent: BaseGoldBorgModuleRecipe
-  id: BorgModuleAdvancedChemical
-  result: BorgModuleAdvancedChemical
-
-# Science Modules
-
-# Service Modules
-
-- type: latheRecipe
-  parent: BaseGoldBorgModuleRecipe
-  id: BorgModuleAdvancedClowning
-  result: BorgModuleAdvancedClowning
-  materials:
-    Steel: 500
-    Glass: 500
-    Plastic: 250
-    Bananium: 375
+## Medical Modules
+#
+#- type: latheRecipe
+#  parent: BaseGoldBorgModuleRecipe
+#  id: BorgModuleAdvancedChemical
+#  result: BorgModuleAdvancedChemical
+#
+## Science Modules
+#
+## Service Modules
