--- a/Resources/Prototypes/_Backmen/Entities/Objects/Devices/translators.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Objects/Devices/translators.yml
@@ -307,7 +307,7 @@
     - Demonic
 
 - type: entity
-  id: Eve-pishtuTranslator
+  id: EvePishtuTranslator
   parent: [ TranslatorPoweredBase ]
   name: Eve-pishtu translator
   description: Translates speech between Eve-pishtu and Galactic Common, allowing your local yeepers to communicate with the locals and vice versa!
