--- a/Resources/Prototypes/Entities/Structures/Machines/research.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/research.yml
@@ -35,7 +35,13 @@
     - Robotics
     - Medical
     - Service
+    roundstartTechs:
+    - MachineParts
+    - Powercells
+    - EngineeringTools
+    - Lightning
     # Backmen-Edit-ENDer
+  - type: ApcPowerReceiver
     powerLoad: 200
   - type: ExtensionCableReceiver
   - type: WiresPanel
