--- a/Resources/Prototypes/_Backmen/Research/arsenal.yml
+++ b/Resources/Prototypes/_Backmen/Research/arsenal.yml
@@ -16,7 +16,48 @@
   - MagazineBoxMagnumPractice
   - MagazineBoxPistolPractice
   - MagazineBoxRiflePractice
-  position: -3,-1
+  - MagazineLightRiflePractice
+  - MagazineRiflePractice
+  - MagazinePistolPractice
+  - SpeedLoaderMagnumPractice
+  - MagazinePistolSubMachineGunPractice
+  position: -4,-2
+
+- type: technology
+  id: LethalAmmunition
+  name: research-technology-lethal-ammunition
+  icon:
+    sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi
+    state: slug
+  discipline: Arsenal
+  tier: 1
+  cost: 10000
+  recipeUnlocks:
+  - BoxLethalshot
+  - BoxShotgunSlug
+  - MagazineBoxLightRifle
+  - MagazineBoxMagnum
+  - MagazineBoxPistol
+  - MagazineBoxRifle
+  - MagazineLightRifle
+  - MagazineLightRifleEmpty
+  - MagazinePistol
+  - MagazinePistolEmpty
+  - MagazinePistolSubMachineGun
+  - MagazinePistolSubMachineGunEmpty
+  - MagazinePistolSubMachineGunTopMounted
+  - MagazinePistolSubMachineGunTopMountedEmpty
+  - MagazineRifle
+  - MagazineRifleEmpty
+  - MagazineShotgun
+  - MagazineShotgunEmpty
+  - MagazineShotgunSlug
+  - SpeedLoaderMagnum
+  - SpeedLoaderMagnumEmpty
+  technologyPrerequisites:
+#  - RiotControl
+  - NonlethalAmmunition
+  position: -5,-2
 
 - type: technology
   id: CombatLaserExperimental
@@ -26,12 +67,10 @@
     state: icon
   discipline: Arsenal
   tier: 1
-  cost: 5000
+  cost: 7500
   recipeUnlocks:
   - WeaponLaserSvalinn
-  technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -3,-2
+  position: -2,-2
 
 - type: technology
   id: WeaponizedLaserManipulation
@@ -41,12 +80,12 @@
     state: icon
   discipline: Arsenal
   tier: 1
-  cost: 7500
+  cost: 10000
   recipeUnlocks:
   - WeaponLaserCarbine
   technologyPrerequisites:
   - CombatLaserExperimental
-  position: -2,-2
+  position: -1,-2
 
 - type: technology
   id: DraconicAmmunition
@@ -70,8 +109,8 @@
   - MagazineBoxLightRifleIncendiary
   - MagazineBoxRifleIncendiary
   technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -4,-0
+  - LethalAmmunition
+  position: -5,-3
 
 - type: technology
   id: UraniumAmmunition
@@ -81,7 +120,7 @@
     state: uranium
   discipline: Arsenal
   tier: 2
-  cost: 12500
+  cost: 15000
   recipeUnlocks:
   - MagazineRifleUranium
   - MagazinePistolUranium
@@ -94,8 +133,8 @@
   - MagazineBoxRifleUranium
   - BoxShotgunUranium
   technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -4,-1
+  - LethalAmmunition
+  position: -5,-1
 
 - type: technology
   id: Explosive
@@ -105,7 +144,7 @@
     state: payload-explosive-armed
   discipline: Arsenal
   tier: 1
-  cost: 10000
+  cost: 12500
   recipeUnlocks:
   - SignallerAdvanced
   - SignalTrigger
@@ -114,7 +153,7 @@
   - FlashPayload
   - ExplosivePayload
   - ChemicalPayload
-  position: -2,-1
+  position: -3,-2
 
 - type: technology
   id: CombatLaserAdvanced
@@ -124,13 +163,12 @@
     state: icon
   discipline: Arsenal
   tier: 1
-  cost: 15000
+  cost: 17500
   recipeUnlocks:
   - WeaponAdvancedLaser
   technologyPrerequisites:
-  - WeaponizedLaserManipulation
   - CombatLaserConcentrated
-  position: -1,-3
+  position: 0,-3
 
 - type: technology
   id: ThermalWeaponry
@@ -144,8 +182,9 @@
   recipeUnlocks:
   - WeaponTemperatureGun
   technologyPrerequisites:
-  - CombatLaserWaveHarnessing
-  position: -3,-4
+  - CombatLaserConcentrated
+  - CombatLaserAdvanced
+  position: 0,-4
 
 - type: technology
   id: CombatLaserConcentrated
@@ -155,12 +194,12 @@
     state: icon
   discipline: Arsenal
   tier: 1
-  cost: 10000
+  cost: 15000
   recipeUnlocks:
   - WeaponLaserCannon
   technologyPrerequisites:
   - WeaponizedLaserManipulation
-  position: -2,-3
+  position: -1,-3
 
 - type: technology
   id: CombatLaserWaveHarnessing
@@ -169,10 +208,10 @@
     sprite: Objects/Weapons/Guns/Battery/xray.rsi
     state: icon
   discipline: Arsenal
-  tier: 1
-  cost: 15000
+  tier: 3
+  cost: 20000
   recipeUnlocks:
   - WeaponXrayCannon
   technologyPrerequisites:
   - CombatLaserConcentrated
-  position: -2,-4
+  position: -2,-3
