--- a/Resources/Prototypes/_Backmen/Research/engineering.yml
+++ b/Resources/Prototypes/_Backmen/Research/engineering.yml
@@ -33,8 +33,9 @@
     state: high
   discipline: Engineering
   tier: 1
-  cost: 1500
+  cost: 7500
   recipeUnlocks:
+   - PowerCellHyper
    - PowerCellHigh
   technologyPrerequisites:
   - Powercells
@@ -48,7 +49,7 @@
     state: microreactor
   discipline: Engineering
   tier: 1
-  cost: 10000
+  cost: 15000
   recipeUnlocks:
    - PowerCellMicroreactor
   technologyPrerequisites:
@@ -65,6 +66,8 @@
   tier: 1
   cost: 500
   recipeUnlocks:
+  - ClothingOuterVestTank
+  - SprayPainterAmmo
   - Wirecutter
   - Screwdriver
   - Welder
@@ -94,7 +97,7 @@
     state: icon
   discipline: Engineering
   tier: 1
-  cost: 12000
+  cost: 15000
   recipeUnlocks:
     - WelderExperimental
     - PowerDrill
@@ -111,7 +114,7 @@
     state: icon
   discipline: Engineering
   tier: 1
-  cost: 5500
+  cost: 7500
   recipeUnlocks:
   - HolofanProjector
   technologyPrerequisites:
