--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -540,7 +540,7 @@ DrinkIrishCarBomb: DrinkIrishSlammer
 
 # 2025-01-06
 BorgModuleRadiationDetection: null
-BorgModuleGPS: null
+# BorgModuleGPS: null
 BorgModuleLightReplacer: BorgModuleCustodial
 BorgModuleAdvancedTreatment: null
 ClothingMaskSexyClown: ClothingMaskBlushingClown
