--- a/Resources/Prototypes/Entities/Structures/Machines/research.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/research.yml
@@ -36,6 +36,7 @@
     - Medical
     - Service
     # Backmen-Edit-ENDer
+  - type: ApcPowerReceiver
     powerLoad: 200
   - type: ExtensionCableReceiver
   - type: WiresPanel
