--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -232,6 +232,7 @@
     - id: MedkitFilled
     - id: RubberStampCMO
     - id: MedTekCartridge
+    - id: ClothingEyesHudMedChem #Erida-edit
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
