--- a/Resources/Textures/_Erida/Interface/Emotes/attributions.yml
+++ b/Resources/Textures/_Erida/Interface/Emotes/attributions.yml
@@ -6,3 +6,4 @@
 - files: ["purse.png", "purr.png"]
   license: "CC-BY-SA-3.0"
   copyright: "Taken from https://github.com/AdventureTimeSS14/space_station_ADT"
+  source: "https://github.com/AdventureTimeSS14/space_station_ADT"
