--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -173,6 +173,7 @@
     - id: RCDAmmo
     - id: RubberStampCE
     - id: MetalFoamGrenade
+    - id: ProfessionalRCD #Erida-Edit
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
@@ -233,6 +234,7 @@
     - id: RubberStampCMO
     - id: MedTekCartridge
     - id: ClothingEyesHudMedChem #Erida-edit
+    - id: AdvancedDefibrillator #Erida-edit
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
