--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -22,6 +22,9 @@
     CaptainJetpackStealObjective: 0.5
     HandTeleporterStealObjective: 0.5
     EnergyShotgunStealObjective: 0.5
+    CMOAdvancedDefibStealObjective: 1 #Erida-start
+    CEProfessionalRCDStealObjective: 1
+    #Erida-End 
 
 - type: weightedRandom
   id: TraitorObjectiveGroupKill
@@ -85,6 +88,7 @@
     BibleStealObjective: 1
     ClothingNeckGoldmedalStealObjective: 1              #other
     ClothingNeckClownmedalStealObjective: 0.5
+    CMOMedChemHUDStealObjective: 1                      #Erida-Edit
 
 - type: weightedRandom
   id: ThiefObjectiveGroupStructure
