fix-test and recipe modification

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -210,6 +210,7 @@
     - Instruments
     - Equipment
     - FauxTiles
+    - BackmenTranslators
   - type: EmagLatheRecipes
     emagDynamicPacks:
     - SecurityAmmo
@@ -259,7 +260,6 @@
     - CargoBoardsStatic
     - MedicalBoardsStatic
     - EngineeringBoardsStatic
-    - CircuitFloorsStatic
     # dynamicPacks: # Backmen-EDIT
     - EngineeringBoards
     - CargoBoards
