--- a/Resources/Prototypes/_Backmen/Research/arsenal.yml
+++ b/Resources/Prototypes/_Backmen/Research/arsenal.yml
@@ -6,7 +6,7 @@
     state: beanbag
   discipline: Arsenal
   tier: 1
-  cost: 5000
+  cost: 2500
   recipeUnlocks:
   - MagazineShotgunBeanbag
   - BoxShellTranquilizer
@@ -16,7 +16,48 @@
   - MagazineBoxMagnumPractice
   - MagazineBoxPistolPractice
   - MagazineBoxRiflePractice
-  position: -3,-1
+  - MagazineLightRiflePractice
+  - MagazineRiflePractice
+  - MagazinePistolPractice
+  - SpeedLoaderMagnumPractice
+  - MagazinePistolSubMachineGunPractice
+  position: -4,-2
+
+- type: technology
+  id: LethalAmmunition
+  name: research-technology-lethal-ammunition
+  icon:
+    sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi
+    state: slug
+  discipline: Arsenal
+  tier: 1
+  cost: 5000
+  recipeUnlocks:
+  - BoxLethalshot
+  - BoxShotgunSlug
+  - MagazineBoxLightRifle
+  - MagazineBoxMagnum
+  - MagazineBoxPistol
+  - MagazineBoxRifle
+  - MagazineLightRifle
+  - MagazineLightRifleEmpty
+  - MagazinePistol
+  - MagazinePistolEmpty
+  - MagazinePistolSubMachineGun
+  - MagazinePistolSubMachineGunEmpty
+  - MagazinePistolSubMachineGunTopMounted
+  - MagazinePistolSubMachineGunTopMountedEmpty
+  - MagazineRifle
+  - MagazineRifleEmpty
+  - MagazineShotgun
+  - MagazineShotgunEmpty
+  - MagazineShotgunSlug
+  - SpeedLoaderMagnum
+  - SpeedLoaderMagnumEmpty
+  technologyPrerequisites:
+#  - RiotControl
+  - NonlethalAmmunition
+  position: -5,-2
 
 - type: technology
   id: CombatLaserExperimental
@@ -29,9 +70,7 @@
   cost: 5000
   recipeUnlocks:
   - WeaponLaserSvalinn
-  technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -3,-2
+  position: -2,-2
 
 - type: technology
   id: WeaponizedLaserManipulation
@@ -46,7 +85,7 @@
   - WeaponLaserCarbine
   technologyPrerequisites:
   - CombatLaserExperimental
-  position: -2,-2
+  position: -1,-2
 
 - type: technology
   id: DraconicAmmunition
@@ -70,8 +109,8 @@
   - MagazineBoxLightRifleIncendiary
   - MagazineBoxRifleIncendiary
   technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -4,-0
+  - LethalAmmunition
+  position: -5,-3
 
 - type: technology
   id: UraniumAmmunition
@@ -94,8 +133,8 @@
   - MagazineBoxRifleUranium
   - BoxShotgunUranium
   technologyPrerequisites:
-  - NonlethalAmmunition
-  position: -4,-1
+  - LethalAmmunition
+  position: -5,-1
 
 - type: technology
   id: Explosive
@@ -114,7 +153,7 @@
   - FlashPayload
   - ExplosivePayload
   - ChemicalPayload
-  position: -2,-1
+  position: -3,-2
 
 - type: technology
   id: CombatLaserAdvanced
@@ -128,9 +167,8 @@
   recipeUnlocks:
   - WeaponAdvancedLaser
   technologyPrerequisites:
-  - WeaponizedLaserManipulation
   - CombatLaserConcentrated
-  position: -1,-3
+  position: 0,-3
 
 - type: technology
   id: ThermalWeaponry
@@ -144,8 +182,9 @@
   recipeUnlocks:
   - WeaponTemperatureGun
   technologyPrerequisites:
-  - CombatLaserWaveHarnessing
-  position: -3,-4
+  - CombatLaserConcentrated
+  - CombatLaserAdvanced
+  position: 0,-4
 
 - type: technology
   id: CombatLaserConcentrated
@@ -160,7 +199,7 @@
   - WeaponLaserCannon
   technologyPrerequisites:
   - WeaponizedLaserManipulation
-  position: -2,-3
+  position: -1,-3
 
 - type: technology
   id: CombatLaserWaveHarnessing
@@ -175,4 +214,4 @@
   - WeaponXrayCannon
   technologyPrerequisites:
   - CombatLaserConcentrated
-  position: -2,-4
+  position: -2,-3
