--- a/Resources/Maps/reach.yml
+++ b/Resources/Maps/reach.yml
@@ -13488,10 +13488,15 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - Industrial
+      - engineering
       - Arsenal
-      - Experimental
-      - CivilianServices
+      - Security
+      - cargo
+      - shaft
+      - Scientific
+      - Robotics
+      - Medical
+      - Service
 - proto: SeedExtractor
   entities:
   - uid: 1836
