--- a/Resources/Maps/relic.yml
+++ b/Resources/Maps/relic.yml
@@ -40527,10 +40527,15 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - Industrial
+      - engineering
       - Arsenal
-      - Experimental
-      - CivilianServices
+      - Security
+      - cargo
+      - shaft
+      - Scientific
+      - Robotics
+      - Medical
+      - Service
 - proto: SeedExtractor
   entities:
   - uid: 1981
@@ -45248,10 +45253,15 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - Industrial
+      - engineering
       - Arsenal
-      - Experimental
-      - CivilianServices
+      - Security
+      - cargo
+      - shaft
+      - Scientific
+      - Robotics
+      - Medical
+      - Service
 - proto: VendingMachineBooze
   entities:
   - uid: 1374
