--- a/Resources/Maps/exo.yml
+++ b/Resources/Maps/exo.yml
@@ -94544,11 +94544,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
@@ -98192,11 +98192,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
@@ -108670,11 +108670,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
