--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -15322,11 +15322,11 @@ entities:
       parent: 30
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
@@ -117855,11 +117855,11 @@ entities:
       parent: 30
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
@@ -129858,11 +129858,11 @@ entities:
       parent: 30
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
