--- a/Resources/Maps/plasma.yml
+++ b/Resources/Maps/plasma.yml
@@ -138203,11 +138203,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
@@ -151473,11 +151473,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
