--- a/Resources/Maps/relic.yml
+++ b/Resources/Maps/relic.yml
@@ -45253,11 +45253,11 @@ entities:
       parent: 2
     - type: TechnologyDatabase
       supportedDisciplines:
-      - engineering
+      - Engineering
       - Arsenal
       - Security
-      - cargo
-      - shaft
+      - Cargo
+      - Shaft
       - Scientific
       - Robotics
       - Medical
