--- a/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
@@ -47,7 +47,7 @@
         Blunt: 1
         Slash: 5
   - type: Speech
-    allowedEmotes: [ 'Mews', 'Meows', 'Purrs' ]
+    allowedEmotes: [ 'Mews', 'Meows', 'Purrs', 'Hiss' ]
     speechSounds: Alto
   - type: DamageOnHighSpeedImpact
     damage:
