--- a/Resources/Maps/Shuttles/emergency_rod.yml
+++ b/Resources/Maps/Shuttles/emergency_rod.yml
@@ -3639,7 +3639,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 0.5,-2.5
       parent: 1
-- proto: ShotGunCabinetFilledBackmen
+- proto: ShotGunCabinetFilled
   entities:
   - uid: 492
     components:
